src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_55_variation.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
	<Button>
		<Button.Background>
		            <SolidColorBrush Color="Green" />
            		Hi all
		</Button.Background>
	</Button>
</DockPanel>
</Page>
